--- a/src/main/resources/static/HTML/index.html
+++ b/src/main/resources/static/HTML/index.html
@@ -3,20 +3,60 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <!-- <link rel="stylesheet" href=""> -->
+        
+        <!-- <link rel="stylesheet" href="styles.css"> -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+            crossorigin="anonymous">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <div class="container">
+            <nav class="navbar navbar-light bg-light">
+                <a href="link/to/page" class="navbar-brand">To Do List</a>
+                <!-- <button class="navbar-toggler" data-toggle="collapse" data-target="#hasToMatch">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="hasToMatch">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a href="link/to/login" class="nav-link">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="link/to/home" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="link/to/memes" class="nav-link">Memes</a>
+                        </li>
+                    </ul>
+                </div> -->
+            </nav>
+            <div class="row" id="firstRow">
+                <div class="col-md">
+                    <div class="alert alert-primary">
+                        <div id="subtasks"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
         
-        <script src="" async defer></script>
+        <!-- <script src="" async defer></script> -->
+        <script src="../JS/Subtasks.js"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" 
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
     </body>
 </html>
