CORS error resolved

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,6 +41,7 @@
             <div class="row" id="firstRow">
                 <div class="col-md">
                     <div class="alert alert-primary">
+                        <div class="alert" id="onsuccess"></div>
                         <div id="subtaskCreate">
                             <input type="text" class="form-control" id="subtaskDescription" placeholder="Task Description:" />
                     <input type="text" class="form-control" id="eLevel" placeholder="Effort Level:" />
@@ -62,7 +63,7 @@
         </div>
         
         <!-- <script src="" async defer></script> -->
-        <script src="../JS/Subtasks.js"></script>
+        <script src="./JS/Subtasks.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
