table added, to be removed for better formatting

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -53,6 +53,9 @@
                     
                 </div>
             </div>
+            <table>
+                <!-- here goes our data! -->
+                </table>
             <div class="row" id="taskDisplayRow">
                 <div class="col-md">
                     <div class="alert alert-primary">
