all wanted values displaying in table as should

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -79,16 +79,17 @@
         <div class="container wireframe">
             <div class="row justify-content-around row-wireframe">
                 <div class="col-2 wireframe">
-                    <h4>✔️</h4>
-                    <div class="col-md"></div>
+                    <h4>Done✔️</h4>
+                    <div id="checkerDone"></div>
                     
                 </div>
                 <div class="col-4 wireframe">
                     <h4>Description</h4>
                     <div id="subtasks"></div>
                 </div>
-                <div class="col-2 wireframe">
+                <div class="col-4 wireframe">
                     <h4>Effort Level</h4>
+                    <div id="eLevelDisplay"></div>
                 </div>
                 <div class="col-1 wireframe">
                     <h4>Delete</h4>
