separated delete buttons

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -91,8 +91,9 @@
                     <h4>Effort Level</h4>
                     <div id="eLevelDisplay"></div>
                 </div>
-                <div class="col-1 wireframe">
+                <div class="col-2 wireframe">
                     <h4>Delete</h4>
+                    <div id="deleteButton"></div>
                 </div>
             </div>
 
