--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -51,7 +51,8 @@
 
                     <button type="button" class="btn btn-success" onclick="createSubtask()"
                         data-dismiss="modal">Create</button>
-                    <!-- <button type="button" data-dismiss="modal" class="btn btn-danger">Close</button> -->
+                    <button type="button" class="btn btn-danger" onclick="deleteSubtask(3)"
+                    data-dismiss="modal">Delete</button>
                 </div>
 
             </div>
@@ -79,7 +80,7 @@
         <div class="container wireframe">
             <div class="row justify-content-around row-wireframe">
                 <div class="col-2 wireframe">
-                    <h4>Done✔️</h4>
+                    <h4>Done</h4>
                     <div id="checkerDone"></div>
                     
                 </div>
