--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -77,6 +77,7 @@
                 </div>
             </div>
         </div> -->
+        <!-- <div class="alert alert-primary"> -->
         <div class="container wireframe" id = "subtaskLists">
             
             <div class="row justify-content-around row-wireframe">
@@ -101,6 +102,7 @@
             
 
         </div>
+    <!-- </div> -->
     </div>
 
     <!-- <script src="" async defer></script> -->
