--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,8 +14,8 @@
     <!-- <link rel="stylesheet" href=""> -->
 
     <!-- <link rel="stylesheet" href="styles.css"> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 
 <body>
@@ -81,7 +81,7 @@
 
 
         </div>
-        <div class="row" id="firstRow">
+        <!-- <div class="row" id="firstRow">
             <div class="col-md">
                 <div class="alert alert-primary">
                     <div class="alert" id="onsuccessPUT"></div>
@@ -96,7 +96,67 @@
                 </div>
 
             </div>
+        </div> -->
+        <!--Button to show modal-->
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#needToMatch">
+            Update
+        </button>
+
+        <div class="modal" id="updateModalTarget">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h2 class="modal-title">Update Subtask</h2>
+                        <button type="button" class="close" data-bs-dismiss="modal">
+                            <span>&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row" id="firstRow">
+                            <div class="col-md">
+                                <div class="alert alert-primary">
+                                    
+                                    <div id="subtaskUpdate">
+                                        <input type="text" class="form-control" id="subtaskDescriptionPUT"
+                                            placeholder="Updated Task Description:" />
+                                        <input type="text" class="form-control" id="eLevelPUT"
+                                            placeholder="Updated Effort Level:" />
+                                    </div>
+
+                                    <button type="button" class="btn btn-success"
+                                        data-dismiss="modal" id="updateButtonModal">Update</button>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <div class="alert" id="onsuccessPUT"></div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <!-- <div class="modal" id="firstModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h2 class="modal-title">This is a modal</h2>
+                        <button type="button" data-dismiss="modal" class="btn btn-danger">
+                            <span>X</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                    <input type="text" class="form-control" id="name" placeholder="Name:" />
+                    <input type="text" class="form-control" id="job" placeholder="Job:" />
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-success" onclick="createUsers()" data-dismiss="modal">Create</button>
+                        <button type="button" data-dismiss="modal" class="btn btn-danger">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div> -->
     </div>
 
     <!-- <script src="" async defer></script> -->
@@ -109,6 +169,9 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
 </body>
 
