adjusted some formatting

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -70,7 +70,7 @@
                             placeholder="Subtask Description:" />
                         <input type="text" class="form-control" id="eLevel" placeholder="Effort Level:" />
                     </div>
-                    <select id="taskDropdown">
+                    <select id="taskDropdown" class = "btn btn-secondary">
                         <option value=" "> Choose Task List</option>
                     </select>
                     <div class="row" id="firstRow">
