--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -55,9 +55,9 @@
                                 data-dismiss="modal">Create</button>
                         </div>
                         <div class="col-md">
-                            <div class="alert" id="onsuccess"></div>
+                            <div class="alert" id="onsuccessTask"></div>
                         </div>
-                    </div>
+                    </div> 
 
                 </div>
             </div>
@@ -79,7 +79,7 @@
                                 data-dismiss="modal">Create</button>
                         </div>
                         <div class="col-md">
-                            <div class="alert" id="onsuccess"></div>
+                            <div class="alert" id="onsuccessSubtask"></div>
                         </div>
                     </div>
 
